--- a/collection.html
+++ b/collection.html
@@ -29,7 +29,7 @@
             </div>
     </section>
 
-<script src="collectionscript.js"></script>   
+<script type="module" src="index.js"></script>   
 </body>
 
 </html>
