--- a/collection.html
+++ b/collection.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +8,19 @@
     <title>Georgiana's Collection</title>
     <link rel="stylesheet" href="collectionstyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200&family=Yeseva+One&display=swap" rel="stylesheet">
-<link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200&family=Yeseva+One&display=swap"
+        rel="stylesheet">
+    <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet">
 </head>
 
 <body>
     <section class="header">
         <div class="collection-title">
-        <h1 class="myname">Favourite Japanese Animation Movies</h1>
+            <h1 class="myname">Favourite Japanese Animation Movies</h1>
         </div>
         <h2 class="genrefilter">Filter by genre:</h2>
         <div class="filter">
@@ -26,10 +29,10 @@
             <label><input type="checkbox" name="checkbox" id="input4" value="fantasy">Fantasy</label>
             <label><input type="checkbox" name="checkbox" id="input5" value="romance">Romance</label>
             <label><input type="checkbox" name="checkbox" id="input7" value="supernatural">Supernatural</label>
-            </div>
+        </div>
     </section>
 
-<script type="module" src="index.js"></script>   
+    <script type="module" src="index.js"></script>
 </body>
 
 </html>
