--- a/collection.html
+++ b/collection.html
@@ -7,28 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Georgiana's Collection</title>
     <link rel="stylesheet" href="collectionstyle.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200&family=Yeseva+One&display=swap"
-        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
     <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet">
 </head>
 
 <body>
     <section class="header">
         <div class="collection-title">
-            <h1 class="myname">Favourite Japanese Animation Movies</h1>
+            <h1 class="myname">FAVOURITE ANIMATIONS</h1>
         </div>
         <h2 class="genrefilter">Filter by genre:</h2>
         <div class="filter">
-            <label><input type="checkbox" name="checkbox" id="input2" value="adventure">Adventure</label>
-            <label><input type="checkbox" name="checkbox" id="input3" value="drama">Drama</label>
-            <label><input type="checkbox" name="checkbox" id="input4" value="fantasy">Fantasy</label>
-            <label><input type="checkbox" name="checkbox" id="input5" value="romance">Romance</label>
-            <label><input type="checkbox" name="checkbox" id="input7" value="supernatural">Supernatural</label>
+            <label for="input1" class="check"><input type="checkbox" name="checkbox" id="input1" value="adventure">Adventure</label>
+            <label for="input2" class="check"><input type="checkbox" name="checkbox" id="input2" value="drama">Drama</label>
+            <label for="input3" class="check"><input type="checkbox" name="checkbox" id="input3" value="fantasy">Fantasy</label>
+            <label for="input4" class="check"><input type="checkbox" name="checkbox" id="input4" value="romance">Romance</label>
+            <label for="input5" class="check"><input type="checkbox" name="checkbox" id="input5" value="supernatural">Supernatural</label>
         </div>
     </section>
 
